--- a/class4/style.css
+++ b/class4/style.css
@@ -152,10 +152,13 @@ header #toggle::after {
 }
 
 .insaweb {
+    width: 200px;
+    height: 50px;
     display: block;
 }
 
 .sci {
+    
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -211,11 +214,16 @@ header #toggle::after {
         font-size: 1.5em;
         margin: 5px 0;
     }
+    .insaweb
+    {
+        margin: 10px 0 0 100px;
+    }
     .sci {
         position: absolute;
         bottom: 50px;
-        right: initial;
+        display: block;
         flex-direction: row;
+        margin: 10px 0 0 0 ;
     }
     .sci li a {
         margin: initial;
